<resources>
    <string name="app_name">CashCo</string>
    <string name="title_activity_inventory">Xamuor</string>
    <string name="lbl_cust_detail">Customer Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="customer">Customer Fragment</string>
    <string name="inventory">Inventory Fragment</string>
    <string name="title_activity_customer">Customers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_cust_tile">Edit Customer</string>
    <string name="btn_edit_customer">Edit</string>
    <string name="btn_cancel_edit_customer">Cancel</string>
    <string name="txt_invoice">Invoice #</string>
    <string name="txt_payment">Pnt. Type</string>
    <string name="txt_customer">Customer</string>
    <string name="txt_recieved">Recieved</string>
    <string name="spn_choose_customer">Choose / Add add a customer</string>
    <string name="spn_categories">Choose a category</string>
    <string name="txt_recievable">Recievable</string>
    <string name="txt_balance_date">Date</string>
    <string name="title_activity_text_drawer">TextDrawerActivity</string>
    <string name="btn_add">Add</string>
    <string name="edit_ctg_name">Category Name</string>
    <string name="edit_ctg_desc">Description (optional)</string>
    <string name="txt_ctg_title">Add New Category</string>
    <string name="img_product_image">Choose Product Image</string>
    <string name="rdb_taxable">Yes</string>
    <string name="rdb_not_taxable">No</string>
    <string name="edit_product_purchase">Purchase Price</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_product_desc">Description</string>
    <string name="edit_sell_price">Sell Price</string>
    <string name="edit_product_qty">Product Quantity</string>
    <string name="edit_product_barcode">Barcode Number</string>
    <string name="txt_product_title">Add New Product</string>
    <string name="txt_taxable">Taxable?</string>
    <string name="txt_ctg_for_product">Category</string>
    <string name="txt_product_edit_title">Edit Product</string>
    <string name="txt_ctg_edit_title">Edit Category</string>
    <string name="btn_edit_category">Edit</string>
    <string name="mnu_edit_product">Edit</string>
    <string name="mnu_delete_product">Delete</string>
    <string name="menu_customer">Customers</string>
    <string name="menu_inventory">Inventories</string>
    <string name="menu_category">Categories</string>
    <string name="menu_products">Products</string>
    <string name="menu_report">Reports</string>
    <string name="menu_setting">Settings</string>
    <string name="icon_new_customer">Icon of new customer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Daily</string>
    <string name="tab_text_2">Weekly</string>
    <string name="tab_text_3">Monthly</string>
    <string name="tab_text_4">Annuall</string>
    <string name="mnu_today_report">Today</string>
    <string name="mnu_ysd_report">Yesterday</string>
    <string name="mnu_7d_report">Last 7 days</string>
    <string name="mnu_last30d_report">Last 30 days</string>
    <string name="mnu_this_week_report">This Week</string>
    <string name="mnu_last_week_report">Last Week</string>
    <string name="mnu_this_month_report">This Month</string>
    <string name="mnu_last_month_report">Last Month</string>
    <string name="mnu_this_year_report">This Year</string>
    <string name="mnu_last_year_report">Last Year</string>
    <string name="mnu_all_time_report">All Time</string>
    <string name="mnu_cust_range_report">Custom Date Range</string>
    <string name="btn_new_user">New User</string>
    <string name="txt_new_user_header">Add New User</string>
    <string name="users">Users</string>
    <string name="edit_user_fname">First Name</string>
    <string name="edit_user_lname">Last Name</string>
    <string name="edit_user_phone">Phone</string>
    <string name="edit_user_email">Email (optional)</string>
    <string name="edit_user_psd">Password</string>
    <string name="edit_user_uname">User Name</string>
    <string name="edit_user_pass_confirm">Retype Password</string>
    <string name="btn_add_user">Add User</string>
    <string name="txt_role_header">Set User Role</string>
    <string name="rdb_admin">System Admin</string>
    <string name="rdb_stock_manager">Stock Manager</string>
    <string name="rdb_cashier">Cashier</string>
    <string name="btn_user_set_role">Set Role</string>
    <string name="txt_total_sales_lbl">Total Sales:</string>
    <string name="txt_payment_lbl">Payment:</string>
    <string name="txt_recieved_lbl">Recieved Amount:</string>
    <string name="txt_recievable_lbl">Recievable Amount:</string>
    <string name="txt_cash_lble">Cash</string>
    <string name="txt_master_lbl">Master Card</string>
    <string name="txt_debit_lbl">Debit Card</string>
    <string name="print_icon_desc">Print icon</string>
    <string name="txt_usd_currency">$</string>
    <string name="btn_cancel">Cancel</string>
    <string name="Add_btn">Add</string>
    <string name="logo">Logo</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="lbl_log_in">Log In</string>
    <string name="hint_password">Password</string>
    <string name="hint_user_name">User Name</string>
    <string name="content_description_logo">CashCo Logo</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="btn_retry">Retry</string>
    <string name="validation_msg1">UPS...Couldn\'t Sign In</string>
    <string name="validation_msg2">Your username and password don\'t match.\nPlease try again.</string>
    <string name="menu_sell">Sell</string>
    <string name="txt_park">Park</string>
    <string name="txt_void">Void</string>
    <string name="txt_products">Products</string>
    <string name="txt_product">Product</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_keyboard">Keyboard</string>
    <string name="content_desription_product_image">Product Image</string>
    <string name="content_description_category_image">Category Image</string>
    <string name="search_product">Search for products</string>
    <string name="search_category">Search for categories</string>
    <string name="search_customers_and_places">Search customers and places</string>
    <string name="search_customer">Search for customers</string>
    <string name="txt_category">Category</string>
    <string name="txt_item_name">Item Name</string>
    <string name="txt_price">Price</string>
    <string name="txt_qty">Quantity</string>
    <string name="txt_lbl_subtotal">Sub Total</string>
    <string name="btn_pay_invoice">Pay</string>
    <string name="txt_lbl_tax">Tax</string>
    <string name="txt_lbl_total">Total</string>
    <string name="txt_lbl_total_amount_due">Total Amount Due</string>
    <string name="btn_lbl_credit_card">Credit Card</string>
    <string name="btn_lbl_debit_card">Debit Card</string>
    <string name="btn_lbl_check_card">Check</string>
    <string name="txt_lbl_amound_recieved">Amount Received</string>
    <string name="lbl_change_due">Change Due</string>
    <string name="btn_done">Done</string>
    <string name="txt_lbl_balance_due">Balance Due</string>
    <string name="hint_amount_rvd">Amount Received</string>
    <string name="txt_lbl_trans_code">Transaction Number</string>
    <string name="txt_lbl_check_code">Check Number</string>
    <string name="err_check_required">Check number required</string>
    <string name="err_recieved_amount_required">Amount Received required!</string>
    <string name="err_full_amount_between">Amount Received greater than or equal to </string>
    <string name="err_partial_amount_between">Amount Received between zero and </string>
    <string name="err_trans_code_required">Check number required</string>
    <string name="txt_label_list_cust_bn">Bss. Name</string>
    <string name="txt_lbl_list_cust_id">ID</string>
    <string name="txt_lbl_list_cust_fn">F. Name</string>
    <string name="txt_lbl_list_cust_ln">L. Name</string>
    <string name="txt_lbl_list_cust_phone">Phone</string>
    <string name="txt_lbl_list_cust_accb">Acc. Balance</string>
    <string name="txt_lbl_list_cust_status">Status</string>
    <string name="txt_supplier">Supplier</string>
    <string name="txt_inventory">Inventory</string>
    <string name="txt_retail_price">Retail Price</string>
    <string name="txt_created">Created</string>
    <string name="txt_updated">Updated</string>
    <string name="img_edition_icon">Edition Icon</string>
    <string name="txt_lbl_edit">Edit</string>
    <string name="btn_cancel_payment">Cancel</string>
    <string name="edit_product_cost">Cost</string>
    <string name="btn_save">Save</string>
    <string name="prd_name_required">Product name required</string>
    <string name="prd_qty_required">Product quantity required</string>
    <string name="prd_barcode_required">Product barcode number required</string>
    <string name="prd_cost_required">Product cost required</string>
    <string name="prd_retail_price_required">Product retail price required</string>
    <string name="ctg_name_required">Category name required</string>
    <string name="FAB">FAB</string>
    <string name="txt_change_discount">Discount</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="minimum_one">Quantity can be at least one.</string>
    <string name="txt_lbl_new_product">New Product</string>
    <string name="txt_lbl_new_category">New Category</string>
    <string name="txt_comp_profile">Company Profile</string>
    <string name="txt_transactions">Transactions</string>
    <string name="txt_add_new_cust">Add New Customer</string>
    <string name="edit_business">Bussiness Name</string>
    <string name="edit_cust_seller">Seller Permit Number</string>
    <string name="txt_limit_purchase">Limit Purchase</string>
    <string name="edit_country">Country</string>
    <string name="edit_province">State/Province</string>
    <string name="edit_address1">Address 1</string>
    <string name="edit_address2">Address 2</string>
    <string name="edit_city">City</string>
    <string name="edit_zip_code">Zip Code</string>
    <string name="edit_fax">Fax Number</string>
    <string name="edit_notes">Notes</string>
    <string name="edit_price_level">Price Level</string>
    <string name="edit_tax_number">Tax Number</string>
    <string name="zipcode_only">Zip Code can only be 4 digits.</string>
    <string name="seller_permit_no_required">Seller Permit Number required</string>
    <string name="bn_required">Business name required.</string>
    <string name="fn_required">First name required.</string>
    <string name="phone_required">Phone required.</string>
    <string name="min_phone_char">Phone must be at least 10 digits.</string>
    <string name="country_required">Country required.</string>
    <string name="state_required">State/Province required.</string>
    <string name="addr1_required">Address 1 required.</string>
    <string name="city_required">City required.</string>
    <string name="txt_lbl_acct_opened_at">Account Opened At</string>
    <string name="txt_lbl_account_no">Account Number</string>
    <string name="txt_lbl_total_sales">Total Sales</string>
    <string name="txt_lbl_amount_paid">Amount Paid</string>
    <string name="txt_lbl_amount_due">Amount Due</string>
    <string name="txt_invoices">Invoices</string>
    <string name="txt_payments">Payments</string>
    <string name="txt_email">Email</string>
</resources>