<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="450dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/padding"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        tools:context="com.xamuor.cashco.cashco.com.xamuor.cashco.Views.NewCategoryFragment">
        <TextView
            android:id="@+id/txt_new_cust_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_new_cust"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edit_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:inputType="text"
            android:hint="@string/edit_business"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_cust_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_cust_seller"
            android:inputType="number"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_cust_fn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_user_fname"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_cust_ln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_user_lname"
            android:inputType="text"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/img_customer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:contentDescription="@string/img_product_image"
            android:src="@drawable/ic_add_image"/>
        <EditText
            android:id="@+id/edit_cust_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_user_phone"
            android:inputType="phone"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_change_cust_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_user_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/txt_limit_purchase"
            android:layout_width="wrap_content"
            android:text="@string/txt_limit_purchase"
            android:layout_marginTop="@dimen/small_margin"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:id="@+id/rdg_for_limit_purchase"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdb_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/rdb_taxable"/>
            <RadioButton
                android:id="@+id/rdb_not_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginStart="50dp"
                android:text="@string/rdb_not_taxable"/>
        </RadioGroup>
        <EditText
            android:id="@+id/edit_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_country"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_province"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_address1"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_address2"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_city"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_zip_code"
            android:inputType="number"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/txt_is_employee"
            android:layout_width="wrap_content"
            android:text="Employee"
            android:layout_marginTop="@dimen/small_margin"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:id="@+id/rdg_is_employee"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdb_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/rdb_taxable"/>
            <RadioButton
                android:id="@+id/rdb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:checked="true"
                android:text="@string/rdb_not_taxable"/>
        </RadioGroup>
        <EditText
            android:id="@+id/edit_fax_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_fax"
            android:inputType="number"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_notes"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_price_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_price_level"
            android:inputType="numberDecimal"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_tax_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_tax_number"
            android:inputType="number"
            android:maxLines="1"/>
        <Button
            android:id="@+id/btn_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:visibility="gone"
            android:text="@string/btn_add"/>
        <Button
            android:id="@+id/btn_cancel_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/btn_cancel_edit_customer"/>
    </LinearLayout>
</ScrollView>
