<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:layout_marginBottom="@dimen/margin_large"
    tools:context="com.xamuor.cashco.Views.NewCategoryFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/linear_new_customer"
        android:layout_width="match_parent"
        android:padding="@dimen/padding"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start">
        <EditText
            android:id="@+id/edit_comp_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_cust_seller"
            android:inputType="number"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_bn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:inputType="text"
            android:hint="@string/edit_business"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_user_phone"
            android:inputType="phone"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_user_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_country"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_province"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_address1"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit__comp_address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_address2"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_city"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/edit_comp_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small_size"
            android:hint="@string/edit_zip_code"
            android:inputType="number"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/txt_comp_limit_pur"
            android:layout_width="wrap_content"
            android:text="@string/txt_limit_purchase"
            android:layout_marginTop="@dimen/small_margin"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:id="@+id/rdg_is_employee"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdb_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/rdb_taxable"/>
            <RadioButton
                android:id="@+id/rdb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:checked="true"
                android:text="@string/rdb_not_taxable"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>