<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tbl_product_list_for_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow
        android:id="@+id/tr_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:padding="@dimen/small_margin"
        android:weightSum="7">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_product"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:civ_border_color="@color/white_color"
            android:contentDescription="@string/content_desription_product_image" />
        <TextView
            android:id="@+id/txt_product_for_edit"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/txt_products"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_inventory"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/txt_inventory"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_retail_price"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/txt_retail_price"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_created"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/txt_created"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_updated"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/txt_updated"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_edit"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/img_edition_icon" />
    </TableRow>
</TableLayout>