<LinearLayout
    android:id="@+id/layout_for_edit_products"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:layout_marginStart="@dimen/margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Spinner
        android:id="@+id/spn_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_name"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:inputType="textAutoComplete"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_desc"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:inputType="textAutoComplete"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_product_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_qty"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:inputType="number"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_product_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_barcode"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:inputType="number"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_product_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_product_cost"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/edit_product_retail_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_retail_price"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />
    <Spinner
        android:id="@+id/spn_product_taxable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/product_taxable"
        android:layout_marginTop="@dimen/margin"/>

</LinearLayout>